Added master.tryserver.blink build bucket
R=vadimsh@chromium.org
BUG=495680

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -38,6 +38,26 @@ buckets {
   }
 }
 
+# Defining blink build bucket in chromium/src repo because
+# blink will merge to chromium/src.
+# Also git admins are reluctant to create infra/config branches
+# in svn-based git repos (crbug.com/513580).
+buckets {
+  name: "master.tryserver.blink"
+  acls {
+    role: READER
+    group: "all"
+  }
+  acls {
+    role: SCHEDULER
+    group: "service-account-cq"
+  }
+  acls {
+    role: WRITER
+    group: "service-account-chromium-tryserver"
+  }
+}
+
 buckets {
   name: "master.tryserver.chromium.gpu"
   acls {
