Tryjob access for buckets
Configured tryjob access for tryserver build buckets.

Also added codereview.settings and OWNERS files

R=sheyang@chromium.org
BUG=461614

Review URL: https://codereview.chromium.org/1262153006 .

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -50,6 +50,10 @@ buckets {
   }
   acls {
     role: SCHEDULER
+    group: "project-chromium-tryjob-access"
+  }
+  acls {
+    role: SCHEDULER
     group: "service-account-cq"
   }
   acls {
@@ -63,6 +67,10 @@ buckets {
   acls {
     role: READER
     group: "all"
+  }
+  acls {
+    role: SCHEDULER
+    group: "project-chromium-tryjob-access"
   }
   acls {
     role: SCHEDULER
@@ -102,6 +110,10 @@ buckets {
   }
   acls {
     role: SCHEDULER
+    group: "project-chromium-tryjob-access"
+  }
+  acls {
+    role: SCHEDULER
     group: "service-account-cq"
   }
   acls {
@@ -119,6 +131,10 @@ buckets {
   acls {
     role: READER
     group: "all"
+  }
+  acls {
+    role: SCHEDULER
+    group: "project-chromium-tryjob-access"
   }
   acls {
     role: SCHEDULER
@@ -142,6 +158,10 @@ buckets {
   }
   acls {
     role: SCHEDULER
+    group: "project-chromium-tryjob-access"
+  }
+  acls {
+    role: SCHEDULER
     group: "service-account-cq"
   }
   acls {
@@ -153,4 +173,3 @@ buckets {
     group: "project-chromium-tryjob-access"
   }
 }
-
