New bucket: master.chromium.android.fyi
BUG=660180
R=nodir@chromium.org

Review URL: https://codereview.chromium.org/2506123002 .

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -7,6 +7,22 @@
 # Please keep this list sorted by bucket name.
 
 buckets {
+  name: "master.chromium.android.fyi"
+  acls {
+    role: READER
+    group: "all"
+  }
+  acls {
+    role: SCHEDULER
+    group: "service-account-cq"
+  }
+  acls {
+    role: WRITER
+    group: "service-account-chromium-master"
+  }
+}
+
+buckets {
   name: "master.chromium.perf"
   acls {
     role: READER
